Updated app with latest changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-BASE.HTML
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,7 +36,7 @@ BASE.HTML
     /* Breaking news animation */
     .breaking-container {
       background: #000;
-      color: white;
+      color: rgb(36, 136, 217);
       padding: 5px 0;
       overflow: hidden;
       position: relative;
@@ -50,8 +50,8 @@ BASE.HTML
       animation: scroll-left 12s linear infinite;
     }
     .breaking-title span:nth-child(3n+1) { color: #1337ee; } /* blue */
-    .breaking-title span:nth-child(3n+2) { color: #1500ff; } /* blue */
-    .breaking-title span:nth-child(3n+3) { color: #160bdc; } /* blue */
+    .breaking-title span:nth-child(3n+2) { color: #1f12b2; } /* blue */
+    .breaking-title span:nth-child(3n+3) { color: #5f58e3; } /* blue */
     @keyframes scroll-left {
       0% { transform: translateX(100%); }
       100% { transform: translateX(-100%); }
@@ -59,10 +59,10 @@ BASE.HTML
     .headline-marquee {
       font-size: 1rem;
       font-weight: bold;
-      color: #333;
+      color: #9b1616;
     }
     footer {
-      background: #212529;
+      background: #0bb73c;
       color: white;
       padding: 2rem 1rem;
       margin-top: 40px;
@@ -134,7 +134,7 @@ BASE.HTML
     <a href="#"><i class="fab fa-youtube"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
   </div>
-  <p class="designer mt-3">designed by david kivinda</p>
+  <p class="designer mt-3">designed by DAVETECH SOLUTIONS</p>
   <p>&copy; {{ year }} Prime Updates KE. All rights reserved.</p>
 </footer>
 
