--- a/templates/index.html
+++ b/templates/index.html
@@ -24,13 +24,11 @@
   </button>
 </div>
 
-<!-- AdSense -->
-<div class="ad-space text-center mb-4">Ad Space (728x90)</div>
 
 <!-- Trending Stories -->
-<h3 class="fw-bold text-dark mb-3">TRENDING STORIES</h3>
+<h3 class="fw-bold text-dark mb-3:underline">LATEST NEWS</h3>
 <div class="row">
-  {% for post in trending_posts %}
+  {% for post in latest_posts %}
   <div class="col-md-4">
     <div class="card mb-3">
       <img src="{{ url_for('uploaded_file', filename=post.image) }}" class="card-img-top" alt="{{ post.title }}">
@@ -44,22 +42,19 @@
   {% endfor %}
 </div>
 
-<div class="ad-space text-center mb-4">Ad Space (300x250)</div>
 
-<!-- Other Stories -->
-<h4 class="fw-bold text-dark mb-3" style="text-decoration: underline;">Other Stories</h4>
+<!-- TRENDING NEWS -->
+<h4 class="fw-bold text-dark mb-3" style="text-decoration: underline;">TRENDING NEWS</h4>
 {% for post in posts %}
 <div class="card mb-3">
   <div class="card-body">
     <h5><a href="/post/{{ post.id }}">{{ post.title }}</a></h5>
     <img src="{{ url_for('uploaded_file', filename=post.image) }}" class="img-fluid mb-2" alt="{{ post.title }}">
-    <p>{{ post.content[:200] }}...</p>
+    <p>{{ post.content[:2000] }}...</p>
     <a href="/post/{{ post.id }}" class="btn btn-outline-secondary btn-sm">Continue reading</a>
   </div>
 </div>
 {% endfor %}
-
-<div class="ad-space text-center mt-4">Ad Space (160x600)</div>
 
 {% endblock %}
 
