Fix routes, update templates and resolve BuildError

--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -45,6 +45,6 @@
   </div>
 
   <button type="submit" class="btn btn-success">Update Post</button>
-  <a href="{{ url_for('admin') }}" class="btn btn-secondary">Cancel</a>
+  <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Cancel</a>
 </form>
 {% endblock %}
