--- a/templates/delete.html
+++ b/templates/delete.html
@@ -13,6 +13,6 @@
 
 <form method="POST">
   <button type="submit" class="btn btn-danger">Yes, Delete</button>
-  <a href="{{ url_for('admin') }}" class="btn btn-secondary">Cancel</a>
+  <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Cancel</a>
 </form>
 {% endblock %}
